master-cluster/ingress/ingress-game.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "game.ingress.dx.com"
    http:
      paths:
      - path: /mario
        pathType: Prefix
        backend:
          service:
            name: mario-default
            port:
              number: 80
